--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-datasource.url=jdbc:mysql://localhost:3306/
+datasource.url=jdbc:mysql://localhost:3306
 datasource.username=root
-datasource.password=P@ssw0rd
+datasource.password=YU_oppdivide!20
 datasource.testdb=easyshop_test
